--- a/src/style/style.css
+++ b/src/style/style.css
@@ -77,6 +77,9 @@ body {
     padding-inline: 60px;
   }
   @variant xl {
+    padding-inline: 70px;
+  }
+  @variant 2xl {
     padding-inline: 0px;
   }
 }
@@ -86,7 +89,6 @@ body {
   --font-Peyda: "peyda", sans-serif;
   --font-shahrzad: "shahrzad";
   /* colors */
-  --color-sec-white: #f5f5f5;
   --color-smoky-white: #f5f5f5;
   --color-sec-smoky-white: #e6e6e6;
   --color-dark-smoky: #cbc9d1;
