--- a/src/style/style.css
+++ b/src/style/style.css
@@ -96,6 +96,7 @@ body {
   --color-main-Purple: #6147a8;
   --color-very-light-purple: #f7f5ff;
   --color-light-purple: #6147a82e;
+  --color-pastel-purple : #E3DEEF; 
   /* shadow */
   --shadow-header : 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
   /* text shadow */
